--- a/src/main/resources/templates/student/course.html
+++ b/src/main/resources/templates/student/course.html
@@ -23,5 +23,17 @@
         <br>
     </li>
 </ul>
+<h2>Other Courses:</h2>
+<ul>
+    <li th:each="course : ${otherCourses}" th:if="${course.faculty != null}">
+        <strong>Course Name:</strong> <span th:text="${course.name}"></span><br>
+        <strong>Course Code:</strong> <span th:text="${course.code}"></span><br>
+        <strong>Faculty Name:</strong> <span th:text="${course.faculty.name}"></span><br>
+        <form th:action="@{'/student/add/' + ${student.id} + '/' + ${course.code}}" method="post">
+            <button type="submit">Enroll</button>
+        </form>
+        <br>
+    </li>
+</ul>
 </body>
 </html>
