--- a/src/main/resources/templates/student/home.html
+++ b/src/main/resources/templates/student/home.html
@@ -8,9 +8,8 @@
 <!-- Buttons to navigate to other student-related APIs -->
 <div>
     <a th:href="@{/student/gate}"><button>Gate Attendance</button></a>
-    <a th:href="@{/student/view}"><button>Courses Attendance</button></a>
-    <a th:href="@{/student/choose}"><button>Choose Courses</button></a>
     <a th:href="@{/password/change}"><button>Change Password</button></a>
+    <a th:href="@{/student/course}"><button>Courses</button></a>
 </div>
 </body>
 </html>
